# cohort-June26

./: .gitignore  AGENTS.md  README.md  agentic-workflow-layer.md  course-map.md  pyproject.toml  requirements-apps.txt  requirements-bayesian.txt  requirements-geolift.txt  requirements-meridian.txt  requirements.txt
artifacts/: agent-output-validation-checklist.md  calibration-handoff-template.md  checkpoint-template.md  eda-findings-template.md  meridian-model-spec-template.md  model-iteration-log-template.md  variable-map-template.md
capstone/: capstone-guide.md  capstone-template.md
data/: Correlation heatmap data.xlsx  Geometric Adstock computation.xlsx  MMM_Workshop_Data.csv  MMM_Workshop_Data.xlsx  adstock_shiny_app.py  adstock_shiny_app.py.md  config_file.csv  data_dict.csv  generate_synthetic_data.py  generate_synthetic_data.py.md  synthetic_geo_data_dict.csv  synthetic_journeys.csv  synthetic_multi_geo_data.csv
pre-course/: 00_smoke_test.ipynb  00_smoke_test.md  notebook_00_explore_dataset.ipynb  notebook_00_explore_dataset.md  reading_01_what_is_mmm.md  reading_02_stats_refresher.md  reading_03_causal_inference.md  reading_04_bayesian_thinking.md
references/: agent-safety-guide.md  agentic-mmm-demo-guide.md  bayesian-vs-frequentist-mmm-guide.md  context-engineering-guide.md  geo-experiment-agent-demo-guide.md  how-to-write-a-skill.md  reading-roadmap.md
skills/: README.md  skill-readiness-checklist.md
utils/: __init__.py  __init__.py.md  eda_utils.py  eda_utils.py.md  geo_utils.py  geo_utils.py.md  mmm_utils.py  mmm_utils.py.md
(+77 files in other folders)
