[project]
name = "cohort-june26"
version = "0.1.0"
description = "Advanced Marketing Measurement with Coding Agents course materials"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.20",
    "ipywidgets>=8.0",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "networkx>=3.1",
    "numpy>=1.24,<2.2",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "tqdm>=4.65",
]

[project.optional-dependencies]
bayesian = [
    "arviz>=0.15",
    "pymc>=5.0",
    "pymc-marketing>=0.4",
]
meridian = [
    "google-meridian>=1.0",
]
geolift = [
    "rpy2>=3.5",
    "tfp-causalimpact>=0.2.0",
]
apps = [
    "nest-asyncio>=1.5",
    "shiny>=0.6",
]
all = [
    "arviz>=0.15",
    "google-meridian>=1.0",
    "nest-asyncio>=1.5",
    "pymc>=5.0",
    "pymc-marketing>=0.4",
    "rpy2>=3.5",
    "shiny>=0.6",
    "tfp-causalimpact>=0.2.0",
]
